# larapida-on-django

./: .editorconfig  .gitignore  Dockerfile  README.md  collectclient  collectclient.cmd  collectclients.py  collectclients.sh  docker-compose.override.yml  docker-compose.yml  dockerfile  entrypoint.sh  lerna.json  package-lock.json  package.json  pyproject.toml  requirements.txt  startup.sh  update.sh
.github/workflows/: deploy.yml
client/: index.html  package.json  vite.config.ts
client/src/: main.tsx  routes.tsx  store.ts
client/src/api/: endpoints.ts  index.ts
client/src/components/: LoadingCards.tsx  LoadingScreen.tsx  NavigationScroll.tsx  Splash.tsx  Wallpaper.tsx  index.ts  theme.ts
client/src/types/: business.ts  category.ts  index.ts  product.ts  store.ts
clients/www/: .gitignore  index.html  package.json  vite.config.ts
clients/www/public/: browserconfig.xml  index.html  site.webmanifest
clients/www/src/: constants.js  index.js  index.tsx  main.tsx  store.ts  theme.ts
larapida/: manage.py
larapida/larapida/: asgi.py  settings.py  urls.py  wsgi.py
webapp/: db.sqlite3
webapp/account/admin/: __init__.py  utente.py
webapp/account/forms/: __init__.py  utente.py
webapp/account/managers/: __init__.py  utente.py
webapp/account/migrations/: 0001_initial.py  0002_utente_is_admin_alter_utente_is_staff.py
webapp/account/models/: __init__.py  account.py  utente.py
webapp/api/: urls.py
webapp/api/viewsets/: __init__.py  contatti.py
webapp/business/admin/: __init__.py  business.py  social.py
webapp/business/api_views/: __init__.py  business.py
webapp/business/migrations/: 0001_initial.py  0003_business_email.py  (+3 more)
webapp/client/: views.py
webapp/helpers/: __init__.py
webapp/magazzino/: apps.py
webapp/negozio/: apps.py
webapp/warehouse/: apps.py
webapp/webapp/: development.py  settings.py  urls.py
webapp/www/: urls.py
(+287 files in other folders)
