[tool.poetry]
name = "larapida"
version = "4.0.0"
description = "larapida website"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
