[tool.poetry]
name = "larapida"
version = "4.0.18"
description = "larapida website"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
django-cors-headers = "^3.14.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
